fix overflow

--- a/style.css
+++ b/style.css
@@ -59,11 +59,13 @@ section{
     border-left: 7px solid;
     border-image:linear-gradient(180deg,yellow,orange);
     border-image-slice: 1;
+    overflow: scroll;
 }
 #baby-web{
     border-left: 7px solid;
     border-image:linear-gradient(180deg,blue,cyan);
     border-image-slice: 1;
+    overflow: scroll;
 }
 footer p{
     text-align: center;
